--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "7IOUContract/lib/forge-std"]
 	path = 7IOUContract/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "8TipJarContract/lib/forge-std"]
+	path = 8TipJarContract/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
